--- a/onlineexam/src/main/resources/application.yml
+++ b/onlineexam/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  mail:
+    host: smtp.163.com
+    username: 13260905180
+    password: authForTss123
   datasource:
     url: jdbc:sqlite:onlineexam.db
     driver-class-name: org.sqlite.JDBC
