开考前15分钟发送邮件提醒，每5分钟轮询一次

--- a/onlineexam/src/main/resources/application.yml
+++ b/onlineexam/src/main/resources/application.yml
@@ -13,3 +13,6 @@ spring:
     properties:
       hibernate:
         dialect: com.enigmabridge.hibernate.dialect.SQLiteDialect
+email:
+  from-addr: 13260905180@163.com
+  subject: 考试通知
